--- a/src/components/home/home.scss
+++ b/src/components/home/home.scss
@@ -3,4 +3,10 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  background-color: #009393;
+  min-height: 100vh;
+
+  &__heading {
+    color: white;
+  }
 }
