refactor(styled-system-react): variant components with SS and code refactor

--- a/src/components/home/home.scss
+++ b/src/components/home/home.scss
@@ -9,4 +9,11 @@
   &__heading {
     color: white;
   }
+
+  &__nav {
+    display: flex;
+    width: 30%;
+    justify-content: space-around;
+    align-items: center;
+  }
 }
