refactor(styled-system-react): route navigation mapping

--- a/src/components/home/home.scss
+++ b/src/components/home/home.scss
@@ -15,5 +15,10 @@
     width: 30%;
     justify-content: space-around;
     align-items: center;
+
+    &-link {
+      text-decoration: none;
+      font-weight: bold;
+    }
   }
 }
